--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 page-home {
     ion-header{
-        background-color: #0081c7;
+        background-color: #1a8adb;
     }
 
     h1{
@@ -23,7 +23,7 @@ page-home {
 
     .separator{
         margin:0 2rem;
-        background-color: #0081c7;
+        background-color: #1a8adb;
         height: 1px;;
     }
 
@@ -45,7 +45,7 @@ page-home {
     button{
         flex:1;
         height: 8rem;
-        background-color: #0081c7;
+        background-color: #1a8adb;
         color: white;
         font-size: 3rem;
     }
