--- a/src/pages/setup/setup.scss
+++ b/src/pages/setup/setup.scss
@@ -38,7 +38,7 @@ page-setup {
         -moz-border-radius: 20px;
         border-radius: 20px;
         padding-left: 30px;
-        color: #0081c7;
+        color: #1a8adb;
     }
 
     button{
@@ -46,7 +46,7 @@ page-setup {
         flex:1;
         height: 50px;
         background-color: #ffffff;
-        color: #0081c7;
+        color: #1a8adb;
         font-size: 18px;
     }
 }
