--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,15 @@
 page-login {
 
+    .body{
+        background-color: #1a8adb;
+    }
+
+    .scroll-content{
+        height: 1000px;
+    }
+
     form{
-        background-color: #0081c7;
+        background-color: #1a8adb;
         width: 100%;
         height: 100%;
     }
@@ -43,7 +51,7 @@ page-login {
         height: 50px;
         background-color: white;
         border-radius: 10px;
-        color: #0081c7;
+        color: #1a8adb;
         text-transform: uppercase;
         font-size: 14px;
         letter-spacing: 1px;
