--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,6 +1,5 @@
 page-registration {
 
-
     ion-img{
         margin: 3rem 0;
         width: 10rem;
@@ -26,7 +25,7 @@ page-registration {
     ion-input{
         height: 5rem;
         padding-left: 1rem;
-        border-bottom: 1px #0081c7 solid;
+        border-bottom: 1px #1a8adb solid;
         font-size: 1.5rem;
         margin: 0 4rem;
         width:auto;
@@ -35,7 +34,7 @@ page-registration {
     button{
         width: 200px;
         height: 50px;
-        background-color: #0081c7;
+        background-color: #1a8adb;
         border-radius: 10px;
         color: #ffffff;
         text-transform: uppercase;
